## but WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with M2-Planet.  If not, see <http://www.gnu.org/licenses/>.

* Current
** Added

** Changed

** Fixed

** Removed

* 1.8 - 2021-06-08
** Added
AArch64 added support for arithmetic right shift
AMD64 added support for unsigned comparisons
armv7l added support for unsigned comparisons
AArch64 added support for unsigned comparison
added support for --max-string to enable arbitrary large C tokens and strings
Added prototype output buffering for x86
List of known M2-Planet issues has been added
Added first generation implemention of typedef
Add newline tokens to parse stream
Add a preprocessor-only mode (-E)
Add macro directives to token_list
Add support for conditional inclusion (#if, #elif, #else, #endif)
Add error checking for unexpected #endif
Added hacky version of #define support (#if defined($FOO))
Add a test for supported preprocessor features
Added simple macro expansion
Add support for global char foo[12]; definitions
Added support for make -j $num build operations for tests to speed up testing on multicore systems
Enable virtualization of bare metal binaries
Add support for &global_variable
Added __M2__ to default macro environment to enable #if defined(__M2__)  M2-Planet specific functionality
Add support for -D variable and -D variable=value
Added -e (errexit) shell option in scripts, where possible

** Changed
knight-posix HEAP pointer now set by kernel rather than libc
knight now leverages new SET instructions to reduce instruction count and processing time.
Make type information localized to the inside of statements
Default types available and added --bootstrap-mode flag to enable the old behavior for cc_* emulation
Improve error reporting for unexpected non-newline