@@ -179,8 +179,8 @@ fc31fc8b2d78bd50a4c89eb0e29149626868a70842a3dcb01ea87bb275a9e3c2  test/results/t
 965bdf7049179199b9f423250a186c7b64ea55326c3249127d2daf7d42ae53cc  test/results/test0106-knight-native-binary
 0a929d6990caee3e93b1188a38fd3041c6f8e46d25a386024647c0f05c33bce7  test/results/test0106-knight-posix-binary
 331ffb5284bd824494ad61a3b0b2dff5681a63ab604e9a06100af531ae237148  test/results/test0106-x86-binary
-b059b96414cf326cf211c3b1d63eb01a15924a3c60964ed2e583856715e522fa  test/results/test1000-aarch64-binary
-c257acf49baa7335f29fd08dcc33986734bb11217b9489f908ec1a46ac228837  test/results/test1000-amd64-binary
-0ecdeb7ff165e675d30973906691d02cf2a3a9486d4d3e4da1074e1b8e58dbf7  test/results/test1000-armv7l-binary
-423b5e50018d464c62c6a5fc4384cb716f56a07ad434c32e7adc6a4446ebcb4c  test/results/test1000-knight-posix-binary
-989b624d9a37aae9a92286542d45450775bcbb924667a4e7a975834e5e85050b  test/results/test1000-x86-binary
+e9d19ffdb968df9acf74803992ddeaeb8cdac0859c376874aff7c511da8152f1  test/results/test1000-aarch64-binary
+b7bf60cfdbc7307b012ce37f7db9dce1232742ba2e024727659421ea569cabff  test/results/test1000-amd64-binary
+eab68643534484930e46a7e80530323cb6846b732ecb01d868cc162c239bf1a6  test/results/test1000-armv7l-binary
+75223a8ee5a44debdf45244e3862bdaebae0723c093baa38dd92e91241bbeb0e  test/results/test1000-knight-posix-binary
+4919f426e681405958ad576c718dcb2fd3ade32e73b367e28c071503485c7475  test/results/test1000-x86-binary
